--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "bootstrap": "^4.3.1",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.3",
     "reactstrap": "^7.1.0"
   },
